--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -14,20 +14,20 @@
   bottom: 0em;
   height: auto;
   /* sticky footer fix end */
-  margin-top: 0em;
-  color: mix(#fff, $white, 25%);
+  margin-top: 3em;
+  color: mix(#fff, $gray, 25%);
   -webkit-animation: intro 0.3s both;
           animation: intro 0.3s both;
   -webkit-animation-delay: 0.45s;
           animation-delay: 0.45s;
-  background-color: $white;
-  border-top: 1px solid $white;
+  background-color: $light-gray;
+  border-top: 1px solid $light-gray;
 
   footer {
     @include clearfix;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 0em;
+    margin-top: 2em;
     max-width: 100%;
     padding: 0 1em 2em;
 
@@ -49,7 +49,7 @@
   .fab,
   .far,
   .fal {
-    color: mix(#fff, $white, 25%);
+    color: mix(#fff, $gray, 25%);
   }
 }
 
