--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -27,6 +27,7 @@
 
   @include breakpoint($x-large) {
     padding-right: 0;
+    width: 30%;
   }
 
   h2, h3, h4, h5, h6 {
@@ -74,7 +75,7 @@
   vertical-align: top;
   width: 200px;
   // set width only, for non-square avatars
-   height: 200px;
+  // height: 200px;
 
   @include breakpoint($large) {
     display: block;
