--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -60,11 +60,11 @@ $code-background-color-dark : #fff;
 $text-color                 : #fff;
 $border-color               : #fff;
 
-$primary-color              : #7a8288;
+$primary-color              : #9EC5AB;
 $success-color              : #62c462;
 $warning-color              : #f89406;
 $danger-color               : #ee5f5b;
-$info-color                 : #9ec5ab;
+$info-color                 : #9EC5AB;
 
 /* brands */
 $behance-color              : #1769FF;
