--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -15,13 +15,13 @@
   height: auto;
   /* sticky footer fix end */
   margin-top: 3em;
-  color: mix(#fff, $gray, 25%);
+  color: #9EC5AB;
   -webkit-animation: intro 0.3s both;
           animation: intro 0.3s both;
   -webkit-animation-delay: 0.45s;
           animation-delay: 0.45s;
-  background-color: #fff;
-  border-top: 1px solid #fff;
+  background-color: #9EC5AB;
+  border-top: 1px solid #9EC5AB;
 
   footer {
     @include clearfix;
