--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -27,6 +27,7 @@
 
   @include breakpoint(250px) {
     padding-right: 0;
+     width:25%;
   }
 
   h2, h3, h4, h5, h6 {
@@ -35,12 +36,12 @@
   }
 
   h3, h4 {
-    font-size: $type-size-4;
+    font-size: $type-size-6;
   }
 
   p, li {
     font-family: $sans-serif;
-    font-size: $type-size-4;
+    font-size: $type-size-6;
     line-height: 1.5;
   }
 
@@ -118,7 +119,7 @@
 }
 .sidebar .author__name {
   font-family: $sans-serif;
-  font-size: $type-size-4;
+  font-size: $type-size-5;
 }
 
 .author__bio {
@@ -227,7 +228,7 @@
     padding-top: 2px;
     padding-bottom: 2px;
     color: inherit;
-    font-size: $type-size-4;
+    font-size: $type-size-6;
     text-decoration: none;
 
     &:hover {
