--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -60,11 +60,11 @@ $code-background-color-dark : #fff;
 $text-color                 : #fff;
 $border-color               : #fff;
 
-$primary-color              : #9EC5AB;
+$primary-color              : #FFD670;
 $success-color              : #62c462;
 $warning-color              : #f89406;
 $danger-color               : #ee5f5b;
-$info-color                 : #9EC5AB;
+$info-color                 : #FFD670;
 
 /* brands */
 $behance-color              : #1769FF;
@@ -90,9 +90,9 @@ $xing-color                 : #006567;
 
 
 /* links */
-$link-color                 : $info-color;
-$link-color-hover           : mix(#fff, $link-color, 25%);
-$link-color-visited         : mix(#fff, $link-color, 25%);
+$link-color                 : #fff;
+$link-color-hover           : mix(#fff, $info-color, 25%);
+$link-color-visited         : mix(#fff, $info-color, 25%);
 $masthead-link-color        : $primary-color;
 $masthead-link-color-hover  : mix(#fff, $primary-color, 25%);
 
